# sparql_tutorial

./: README.md  pyproject.toml  rdflib and Pandas SPARQL Tutorial.ipynb  requirements.txt
resources/: jena.rdf
sparql_tutorial/: rdflib and Pandas SPARQL Tutorial.ipynb
sparql_tutorial/resources/: ds-dft.ttl  ds-ng-1.ttl  ds-ng-2.ttl  vc-db-2.rdf
