[tool.poetry]
name = "sparql_tutorial"
version = "1.0.0"
description = "Simple SPARQL notebook"
authors = ["Steve Taylor <staylorx@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
python-box = {extras = ["all"], version = "^6.0.2"}
rdflib = "^6.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
vulture = "^2.5"
bandit = "^1.7.4"
isort = "^5.10.1"
black = "^22.6.0"
safety = "^2.1.1"
mypy = "^0.971"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 100
